--- a/client/package.json
+++ b/client/package.json
@@ -20,12 +20,14 @@
     "@angular/router": "^15.2.0",
     "bootstrap": "^5.2.3",
     "bootswatch": "^5.2.3",
+    "cuid": "^2.1.8",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^10.3.0",
     "ngx-spinner": "^15.0.1",
     "ngx-toastr": "^16.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "xng-breadcrumb": "^9.0.0",
     "zone.js": "~0.12.0"
   },
